--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,11 +18,30 @@
 .txt
 {
     text-align: center;
-    margin-top: 28px;
+    margin-top: 25px;
+    font-size: 30px;
+    font-family: 'Lato' , sans-serif;
+    line-height: 30px;
 }
 ._span
 {
     width: 80px;
     float: left;
     margin: 0 3px 5px 5px;
+}
+body
+{
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato' , sans-serif;
+    color: #333;
+    background-size: 100%;
+}
+
+.tel
+{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border: 1px solid #9e9e9e;
+    border-radius: 0px;
 }
