--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,10 @@
 .phone
 {
     margin-top: 15px;
-    background: #fff;
+    background: darkseagreen;
+}
+.col{
+    margin-right: 15px;
 }
 .num-pad
 {
@@ -31,11 +34,10 @@
 }
 body
 {
-    margin: 0;
-    padding: 0;
     font-family: 'Lato' , sans-serif;
     color: #333;
     background-size: 100%;
+    height: auto;
 }
 
 .tel
@@ -45,3 +47,24 @@ body
     border: 1px solid #9e9e9e;
     border-radius: 0px;
 }
+._button
+{
+    margin-top: 20px;
+    margin-left: 45%;
+    margin-right: 45%;
+}
+
+@media only screen and (max-width: 600px)  {
+
+    ._button
+    {
+        margin-top: 5px;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+}
+
+/*Breakpoint 1 (iPhone 5S): 320px*/
+                             /*Breakpoint 2 (iPhone 6+): 414px*/
+                                                          /*Breakpoint 3 (iPad Mini): 703px*/
+                                                                                       /*Breakpoint 4 (iPad Air): 768px*/
